2005-08-12 Francois Proulx <francois.proulx@gmail.com>
	* Changed config.php GMAPS_API_KEY to GMAPS_PUBLIC_API_KEY
	* Added GMAPS_ADMIN_API_KEY, needed for admin UI
	* This is a stupid limitation of the Google Maps API which matches the complete URL path
	* Added /classes/GisPoint.php class
	* Will add geocode + Google Maps capabilities very soon
	* Notice : the XML schema will change very soon...
		* I will try to keep the streetAddress field intact so I won't break backward compat.
	
2005-08-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* classes/MainUI.php: Move the call to schema_validate() in MainUI's constructor
	* lib/RssPressReview/RssPressReview.php: Finish rewrite. Move there to reflect 
	it's independently maintained status 
	* wifidog/classes/Content/HotspotRss.php:  Delete the class, obsolete
	* wifidog/classes/Content/RssAggregator.php:  Functionnal, but needs it's admin UI written.
	* wifidog/include/schema_validate.php:  Create the table structure for the new RssAggregator.
	Remove rss_url in nodes table, no longer needed.  Move it's data to the new Content class.
	
2005-08-11 Francois Proulx <francois.proulx@gmail.com>
	* Refactored the Admin UI.
	* I need to write the upload form and rewrite statistics
	
2005-08-10 Francois Proulx <francois.proulx@gmail.com>
	* More GIS stuff
	
2005-08-10 Francois Proulx <francois.proulx@gmail.com>
	* Added Geocoders
		* /classes/AbstractGeocoder.php
		* /classes/Geocoders/GeocoderCanada.php
		* /classes/Geocoders/GeocoderUsa.php
	* This will be used for enterring GIS data
	* Coming in the next few days : set hotspot gis using Google Maps + Geocoding
		
2005-01-25 Pascal Leclerc  <pascal@plec.ca>
	* Fix hardcoded images path in classes/MainUI.php

2005-07-25 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in hotspot_status , added htmlspecialchars();
	* This solved the bug where ampersands would break the XML
	
2005-07-17 Francois Proulx <francois.proulx@gmail.com>