@@ -1,1 +1,2 @@
 *~
+local.config.php
